--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -23,3 +23,5 @@ jobs:
             
             [1]: https://github.com/peter-evans/create-or-update-comment
           reactions: '+1'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
