--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -6,6 +6,7 @@ on:
     
 jobs:
   comment-with-community-action:
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - name: "Dump Github Context"
