--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -18,11 +18,10 @@ jobs:
           issue-number: ${{ github.event.issue.number }}
           body: |
             This is a multi-line test comment
+            - Doesnt need GITHUB TOKEN
             - With GitHub **Markdown** :sparkles:
             - Used community acton
             - Created by [create-or-update-comment][1]
             
             [1]: https://github.com/peter-evans/create-or-update-comment
           reactions: '+1'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
