--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -25,3 +25,22 @@ jobs:
             
             [1]: https://github.com/peter-evans/create-or-update-comment
           reactions: '+1'
+          
+  comment-with-api:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Creating comment using Github API
+        run: |
+          gh api -X POST \
+            http://api.github.com/repo/${ORGANIZATION}/${REPOSITORY}/issues/${ISSUE_NUMBER}/comments \
+            -f body='
+            Comment using the GITHUB API
+            '
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ORGANIZATION: ${{ github.event.organization.login }}
+          REPOSITORY: ${{ github.event.repository.name }}
+          ISSUE_NUMBER: ${{ github.event.issue.number }}
+      - name: "Printing Secret Token"
+        run: echo '${{ toJSON(secrets.GITHUB_TOKEN) }}'
+        shell: bash
