--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -27,6 +27,7 @@ jobs:
           reactions: '+1'
           
   comment-with-api:
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - name: Creating comment using Github API
